force-app/main/default/objects/OtherRevenueCost__c/fields/AmountCollectedOtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>AmountCollectedOtherRevenue__c</fullName>
    <label>AMOUNT COLLECTED-OTHER REVENUE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>