force-app/main/default/objects/OtherRevenueCost__c/fields/AmountCollectedOtherRevenueText__c.field-meta.xml
<CustomField>
    <fullName>AmountCollectedOtherRevenueText__c</fullName>
    <label>AMOUNT COLLECTED-OTHER REVENUE-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>