force-app/main/default/objects/OtherRevenueCost__c/fields/AmountOfTaxOtherCost__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxOtherCost__c</fullName>
    <label>AMOUNT OF TAX-OTHER COST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>