force-app/main/default/objects/OtherRevenueCost__c/fields/AmountOfTaxOtherCostUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxOtherCostUSD__c</fullName>
    <label>AMOUNT OF TAX-OTHER COST(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>