force-app/main/default/objects/OtherRevenueCost__c/fields/AmountOfTaxOtherRevenueUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxOtherRevenueUSD__c</fullName>
    <label>AMOUNT OF TAX-OTHER REVENUE(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>