force-app/main/default/objects/OtherRevenueCost__c/fields/AmountOtherCostIncludeTax__c.field-meta.xml
<CustomField>
    <fullName>AmountOtherCostIncludeTax__c</fullName>
    <label>AMOUNT OTHER COST INCLUDE TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>