force-app/main/default/objects/OtherRevenueCost__c/fields/AmountOtherRevenueIncludeTax__c.field-meta.xml
<CustomField>
    <fullName>AmountOtherRevenueIncludeTax__c</fullName>
    <label>AMOUNT OTHER REVENUE INCLUDE TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>