force-app/main/default/objects/OtherRevenueCost__c/fields/AmountPaidOtherCost__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidOtherCost__c</fullName>
    <label>AMOUNT PAID-OTHER COST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>