force-app/main/default/objects/OtherRevenueCost__c/fields/AmountPaidOtherCostUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidOtherCostUSD__c</fullName>
    <label>AMOUNT PAID-OTHER COST(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>