force-app/main/default/objects/OtherRevenueCost__c/fields/BankAccountOtherCost__c.field-meta.xml
<CustomField>
    <fullName>BankAccountOtherCost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT-OTHER COST</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>OTHER COST</relationshipLabel>
    <relationshipName>OtherCost</relationshipName>
    <type>Lookup</type>
</CustomField>