force-app/main/default/objects/OtherRevenueCost__c/fields/CollectedFromOtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>CollectedFromOtherRevenue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COLLECTED FROM-OTHER REVENUE</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OTHER REVENUE</relationshipLabel>
    <relationshipName>OtherRevenue</relationshipName>
    <type>Lookup</type>
</CustomField>