force-app/main/default/objects/OtherRevenueCost__c/fields/CostDifferenceText__c.field-meta.xml
<CustomField>
    <fullName>CostDifferenceText__c</fullName>
    <label>COST DIFFERENCE-TEXT</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>