force-app/main/default/objects/OtherRevenueCost__c/fields/DifferenceOtherCost__c.field-meta.xml
<CustomField>
    <fullName>DifferenceOtherCost__c</fullName>
    <formula>AmountOtherCostIncludeTax__c -  AmountPaidOtherCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference(Other Cost)=Total Amount of Oth Cost-Amount Paid-Oth Cost</inlineHelpText>
    <label>DIFFERENCE(OTHER COST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>