force-app/main/default/objects/OtherRevenueCost__c/fields/DifferenceOtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>DifferenceOtherRevenue__c</fullName>
    <formula>AmountOtherRevenueIncludeTax__c  -  AmountCollectedOtherRevenue__c
-RollupAmountFromNextPayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIFFERENCE(OTHER REVENUE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>