force-app/main/default/objects/OtherRevenueCost__c/fields/OtherCostBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>OtherCostBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>OTHER COST BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>