force-app/main/default/objects/OtherRevenueCost__c/fields/OtherCostCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>OtherCostCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER COST CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER COST (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherCostCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>