force-app/main/default/objects/OtherRevenueCost__c/fields/OtherCostVATCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>OtherCostVATCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER COST VAT CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER (OTHER COST VAT CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherCostVATCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>