force-app/main/default/objects/OtherRevenueCost__c/fields/OtherCostVATDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>OtherCostVATDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER COST VAT DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER (OTHER COST VAT DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherCostVATDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>