force-app/main/default/objects/OtherRevenueCost__c/fields/OtherRevenueCostName__c.field-meta.xml
<CustomField>
    <fullName>OtherRevenueCostName__c</fullName>
    <label>OTHER REVENUE/COST NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>