force-app/main/default/objects/OtherRevenueCost__c/fields/OtherRevenueCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>OtherRevenueCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER REVENUE CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER REVENUE (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherRevenueCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>