force-app/main/default/objects/OtherRevenueCost__c/fields/OtherRevenueVATCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>OtherRevenueVATCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER REVENUE VAT CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER (OTHER REVENUE VAT CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherRevenueVATCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>