force-app/main/default/objects/OtherRevenueCost__c/fields/OtherRevenueVATDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>OtherRevenueVATDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OTHER REVENUE VAT DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>OTHER (OTHER REVENUE VAT DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>OtherRevenueVATDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>