force-app/main/default/objects/OtherRevenueCost__c/fields/PaymentConfirmedOtherCost__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmedOtherCost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYMENT CONFIRMED-OTHER COST</label>
    <type>Checkbox</type>
</CustomField>