force-app/main/default/objects/OtherRevenueCost__c/fields/PaymentSettledDateOtherCost__c.field-meta.xml
<CustomField>
    <fullName>PaymentSettledDateOtherCost__c</fullName>
    <label>PAYMENT SETTLED DATE-OTHER COST</label>
    <type>Date</type>
</CustomField>