force-app/main/default/objects/OtherRevenueCost__c/fields/PaymentTypeOtherCost__c.field-meta.xml
<CustomField>
    <fullName>PaymentTypeOtherCost__c</fullName>
    <label>PAYMENT TYPE-OTHER COST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentTerm</valueSetName>
    </valueSet>
</CustomField>