force-app/main/default/objects/OtherRevenueCost__c/fields/PreviousOtherCostIDForSplit__c.field-meta.xml
<CustomField>
    <fullName>PreviousOtherCostIDForSplit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS OTHER COST ID FOR SPLIT</label>
    <referenceTo>OtherRevenueCost__c</referenceTo>
    <relationshipLabel>NEXT OTHER FOR PAYMENT SPLIT</relationshipLabel>
    <relationshipName>OtherIDForSplit</relationshipName>
    <type>Lookup</type>
</CustomField>