force-app/main/default/objects/OtherRevenueCost__c/fields/ReceiptanceTypeOtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>ReceiptanceTypeOtherRevenue__c</fullName>
    <label>RECEIPTANCE TYPE-OTHER REVENUE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentTerm</valueSetName>
    </valueSet>
</CustomField>