force-app/main/default/objects/OtherRevenueCost__c/fields/RevenueDifferenceText__c.field-meta.xml
<CustomField>
    <fullName>RevenueDifferenceText__c</fullName>
    <label>REVENUE DIFFERENCE TEXT</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>