force-app/main/default/objects/OtherRevenueCost__c/fields/RollupAmountFromNextPayment__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountFromNextPayment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ROLLUP AMOUNT RECEIVED FROM NEXT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>