force-app/main/default/objects/OtherRevenueCost__c/fields/TotalAmountOfOtherCost__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfOtherCost__c</fullName>
    <label>TOTAL AMOUNT OF OTHER COST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>