force-app/main/default/objects/OtherRevenueCost__c/fields/UnitPriceOfOtherCost__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfOtherCost__c</fullName>
    <label>UNIT PRICE OF OTHER COST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>