force-app/main/default/objects/OtherRevenueCost__c/fields/UnitPriceOfOtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfOtherRevenue__c</fullName>
    <label>UNIT PRICE OF OTHER REVENUE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>