force-app/main/default/objects/OtherRevenueCost__c/fields/UnitPriceOfOtherRevenueUSD__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfOtherRevenueUSD__c</fullName>
    <label>UNIT PRICE OF OTHER REVENUE(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>