force-app/main/default/objects/OtherRevenueCost__c/recordTypes/BankFee.recordType-meta.xml
<RecordType>
    <fullName>BankFee</fullName>
    <active>false</active>
    <description>Bank Transaction Fee</description>
    <label>Bank Fee</label>
</RecordType>