force-app/main/default/objects/OtherRevenueCost__c/recordTypes/BankFeeUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>BankFeeUSDCurrency</fullName>
    <active>false</active>
    <label>Bank Fee-USD Currency</label>
</RecordType>