force-app/main/default/objects/OtherRevenueCost__c/recordTypes/OtherCost.recordType-meta.xml
<RecordType>
    <fullName>OtherCost</fullName>
    <active>true</active>
    <label>Other Cost</label>
</RecordType>