force-app/main/default/objects/OtherRevenueCost__c/recordTypes/OtherCostUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>OtherCostUSDCurrency</fullName>
    <active>true</active>
    <label>Other Cost-USD Currency</label>
</RecordType>