force-app/main/default/objects/OtherRevenueCost__c/recordTypes/OtherRevenue.recordType-meta.xml
<RecordType>
    <fullName>OtherRevenue</fullName>
    <active>true</active>
    <label>Other Revenue</label>
</RecordType>