force-app/main/default/objects/OtherRevenueCost__c/recordTypes/OtherRevenueUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>OtherRevenueUSDCurrency</fullName>
    <active>true</active>
    <label>Other Revenue-USD Currency</label>
</RecordType>