force-app/main/default/objects/OtherRevenueCost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OtherRevenueCostName__c</columns>
    <columns>ResourceID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ChargeUnit__c</columns>
    <columns>AmountCollectedOtherRevenue__c</columns>
    <columns>CollectedFromOtherRevenue__c</columns>
    <columns>ReceiptanceSettledDateOtherRevenue__c</columns>
    <columns>AmountPaidOtherCost__c</columns>
    <columns>PaymentToOtherCost__c</columns>
    <columns>PaymentSettledDateOtherCost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>