force-app/main/default/objects/OtherRevenueCost__c/listViews/Cost.listView-meta.xml
<ListView>
    <fullName>Cost</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>OtherRevenueCostName__c</columns>
    <columns>ResourceNameForMailMerge__c</columns>
    <columns>TaxRateCost__c</columns>
    <columns>PaymentToOtherCost__c</columns>
    <columns>ChargeUnit__c</columns>
    <columns>TotalAmountOfOtherCost__c</columns>
    <columns>AmountOfTaxOtherCost__c</columns>
    <columns>AmountOtherCostIncludeTax__c</columns>
    <columns>AmountPaidOtherCost__c</columns>
    <columns>PaymentSettledDateOtherCost__c</columns>
    <columns>DifferenceOtherCost__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OtherRevenueCost__c.OtherCost</value>
    </filters>
    <label>Cost</label>
    <language>en_US</language>
</ListView>