force-app/main/default/objects/OtherRevenueCost__c/listViews/Revenue.listView-meta.xml
<ListView>
    <fullName>Revenue</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>OtherRevenueCostName__c</columns>
    <columns>ResourceNameForMailMerge__c</columns>
    <columns>TaxRateRev__c</columns>
    <columns>CollectedFromOtherRevenue__c</columns>
    <columns>ChargeUnit__c</columns>
    <columns>TotalAmountOfOtherRevenue__c</columns>
    <columns>AmountOfTaxOtherRevenue__c</columns>
    <columns>AmountOtherRevenueIncludeTax__c</columns>
    <columns>AmountCollectedOtherRevenue__c</columns>
    <columns>ReceiptanceSettledDateOtherRevenue__c</columns>
    <columns>DifferenceOtherRevenue__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OtherRevenueCost__c.OtherRevenue,OtherRevenueCost__c.OtherRevenueUSDCurrency</value>
    </filters>
    <label>Revenue</label>
    <language>en_US</language>
</ListView>